// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros class not found error: class not found error 1`] = `

import tw from '../lib/macro';
const css = tw\`lol\`

      ↓ ↓ ↓ ↓ ↓ ↓

MacroError: /home/arthie/projects/tailwindcssinjs/packages/macro/test/macro.test.js: Error: @tailwindcssinjs/macro - Class "lol" not found.

`;

exports[`macros components: components 1`] = `

import tw from '../lib/macro';
const css = tw\`container form-input\`

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  width: "100%",
  appearance: "none",
  backgroundColor: "#ffffff",
  borderColor: "#d2d6dc",
  borderWidth: "1px",
  borderRadius: "0.375rem",
  paddingTop: "0.5rem",
  paddingRight: "0.75rem",
  paddingBottom: "0.5rem",
  paddingLeft: "0.75rem",
  fontSize: "1rem",
  lineHeight: "1.5",
  "&::placeholder": {
    color: "#9fa6b2",
    opacity: "1",
  },
  "&:focus": {
    outline: "none",
    boxShadow: "0 0 0 3px rgba(164, 202, 254, 0.45)",
    borderColor: "#a4cafe",
  },
  "@media (min-width: 640px)": {
    maxWidth: "640px",
  },
  "@media (min-width: 668px)": {
    maxWidth: "668px",
  },
  "@media (min-width: 868px)": {
    maxWidth: "868px",
  },
  "@media (min-width: 1024px)": {
    maxWidth: "1024px",
  },
  "@media (min-width: 1280px)": {
    maxWidth: "1280px",
  },
  "@media (min-width: 1536px)": {
    maxWidth: "1536px",
  },
};


`;

exports[`macros correct usage 1: correct usage 1 1`] = `

import tw from '../lib/macro';
const css = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};


`;

exports[`macros correct usage 2: correct usage 2 1`] = `

import tw from '../lib/macro';
const css = tw("m-0 mr-4 text-red-400 transform -translate-y-1/2 lg:hover[bg-blue-100 text-red-200]");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--text-opacity": "1",
  "--transform-translate-x": "0",
  "--transform-translate-y": "-50%",
  "--transform-rotate": "0",
  "--transform-skew-x": "0",
  "--transform-skew-y": "0",
  "--transform-scale-x": "1",
  "--transform-scale-y": "1",
  margin: "0",
  marginRight: "1rem",
  color: ["#f98080", "rgba(249, 128, 128, var(--text-opacity))"],
  transform:
    "translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y))",
  "@media (min-width: 1280px)": {
    "&:hover": {
      "--bg-opacity": "1",
      "--text-opacity": "1",
      backgroundColor: ["#e1effe", "rgba(225, 239, 254, var(--bg-opacity))"],
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
    },
  },
};


`;

exports[`macros correct usage 3: correct usage 3 1`] = `

import tw from '../lib/macro';
const css = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");
const css2 = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");
const css3 = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");
const css4 = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");
const css5 = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");
const css6 = tw('w-1/2 bg-blue-500 scale-0 active:bg-red-300 lg:hover[text-red-200 bg-blue-500]', ['lg:text-red-300',"focus:bg-green-300"], "md:bg-green-300");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};
const css2 = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};
const css3 = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};
const css4 = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};
const css5 = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};
const css6 = {
  "--bg-opacity": "1",
  "--transform-scale-x": "0",
  "--transform-scale-y": "0",
  width: "50%",
  backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
  "&:focus": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1024px)": {
    "--bg-opacity": "1",
    backgroundColor: ["#84e1bc", "rgba(132, 225, 188, var(--bg-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "--text-opacity": "1",
    color: ["#f8b4b4", "rgba(248, 180, 180, var(--text-opacity))"],
    "&:hover": {
      "--text-opacity": "1",
      "--bg-opacity": "1",
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
      backgroundColor: ["#3f83f8", "rgba(63, 131, 248, var(--bg-opacity))"],
    },
  },
};


`;

exports[`macros correct usage tagged: correct usage tagged 1`] = `

import tw from '../lib/macro';
const css = tw\`supports-grid:text-blue-400 important[text-green-200 bg-red-300] m-0 mr-4 text-red-400 transform -translate-y-1/2 lg:hover[bg-blue-100 text-red-200]\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--text-opacity": "1",
  "--bg-opacity": "1 !important",
  "--transform-translate-x": "0",
  "--transform-translate-y": "-50%",
  "--transform-rotate": "0",
  "--transform-skew-x": "0",
  "--transform-skew-y": "0",
  "--transform-scale-x": "1",
  "--transform-scale-y": "1",
  color: ["#f98080", "rgba(249, 128, 128, var(--text-opacity))"],
  backgroundColor: [
    "#f8b4b4 !important",
    "rgba(248, 180, 180, var(--bg-opacity)) !important",
  ],
  margin: "0",
  marginRight: "1rem",
  transform:
    "translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y))",
  "@supports (display: grid)": {
    "--text-opacity": "1",
    color: ["#76a9fa", "rgba(118, 169, 250, var(--text-opacity))"],
  },
  "@media (min-width: 1280px)": {
    "&:hover": {
      "--bg-opacity": "1",
      "--text-opacity": "1",
      backgroundColor: ["#e1effe", "rgba(225, 239, 254, var(--bg-opacity))"],
      color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
    },
  },
};


`;

exports[`macros no usage: no usage 1`] = `

import tw from '../lib/macro'

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros tailwind-ui ussage: tailwind-ui ussage 1`] = `

import tw from '../lib/macro';
const css = tw\`relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-300 transition duration-150 ease-in-out\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--text-opacity": "1",
  "--bg-opacity": "1",
  position: "relative",
  width: "100%",
  display: "flex",
  justifyContent: "center",
  paddingTop: "0.5rem",
  paddingBottom: "0.5rem",
  paddingLeft: "1rem",
  paddingRight: "1rem",
  borderWidth: "1px",
  borderColor: "transparent",
  fontSize: "0.875rem",
  lineHeight: "1.25rem",
  fontWeight: "500",
  borderRadius: "0.375rem",
  color: ["#ffffff", "rgba(255, 255, 255, var(--text-opacity))"],
  backgroundColor: ["#5850ec", "rgba(88, 80, 236, var(--bg-opacity))"],
  transitionProperty:
    "background-color, border-color, color, fill, stroke, opacity, box-shadow, transform",
  transitionDuration: "150ms",
  transitionTimingFunction: "cubic-bezier(0.4, 0, 0.2, 1)",
  "&:hover": {
    "--bg-opacity": "1",
    backgroundColor: ["#6875f5", "rgba(104, 117, 245, var(--bg-opacity))"],
  },
  "&:focus": {
    "--border-opacity": "1",
    outline: "0",
    borderColor: ["#5145cd", "rgba(81, 69, 205, var(--border-opacity))"],
    boxShadow: "0 0 0 3px rgba(180, 198, 252, 0.45)",
  },
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#b4c6fc", "rgba(180, 198, 252, var(--bg-opacity))"],
  },
};


`;

exports[`macros test screen: test screen 1`] = `

import tw from '../lib/macro';
const css = tw\`md2[text-red-200] bg-red-300\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--bg-opacity": "1",
  backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  "@media (min-width: 668px) and (max-width: 767px), (min-width: 868px)": {
    "--text-opacity": "1",
    color: ["#fbd5d5", "rgba(251, 213, 213, var(--text-opacity))"],
  },
};


`;

exports[`macros variant class not allowed: variant class not allowed 1`] = `

import tw from '../lib/macro';
const css = tw\`md[container] form-input\`

      ↓ ↓ ↓ ↓ ↓ ↓

MacroError: /home/arthie/projects/tailwindcssinjs/packages/macro/test/macro.test.js: Error: @tailwindcssinjs/macro - Variant class "md" not allowed with class "container" of type "component"

`;

exports[`macros version 1.3.X test 1: version 1.3.X test 1 1`] = `

import tw from '../lib/macro';
const css = tw\`group-focus:text-red-100 delay-1000 space-y-4 flex space-x-2 divide-x divide-y divide-blue-500 space-x-reverse\`

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  transitionDelay: "1000ms",
  display: "flex",
  ".group:focus &": {
    "--text-opacity": "1",
    color: ["#fde8e8", "rgba(253, 232, 232, var(--text-opacity))"],
  },
  "& > :not(template) ~ :not(template)": {
    "--space-y-reverse": "0",
    "--space-x-reverse": "1",
    "--divide-x-reverse": "0",
    "--divide-y-reverse": "0",
    "--divide-opacity": "1",
    marginTop: "calc(1rem * calc(1 - var(--space-y-reverse)))",
    marginBottom: "calc(1rem * var(--space-y-reverse))",
    marginRight: "calc(0.5rem * var(--space-x-reverse))",
    marginLeft: "calc(0.5rem * calc(1 - var(--space-x-reverse)))",
    borderRightWidth: "calc(1px * var(--divide-x-reverse))",
    borderLeftWidth: "calc(1px * calc(1 - var(--divide-x-reverse)))",
    borderTopWidth: "calc(1px * calc(1 - var(--divide-y-reverse)))",
    borderBottomWidth: "calc(1px * var(--divide-y-reverse))",
    borderColor: ["#3f83f8", "rgba(63, 131, 248, var(--divide-opacity))"],
  },
};


`;

exports[`macros version 1.3.X test 2: version 1.3.X test 2 1`] = `

import tw from '../lib/macro';
const css = tw\`group-focus:text-red-100 md:delay-1000 md:space-y-4 md:space-x-2 md:divide-x md:divide-y md:divide-blue-500 md:space-x-reverse\`

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  ".group:focus &": {
    "--text-opacity": "1",
    color: ["#fde8e8", "rgba(253, 232, 232, var(--text-opacity))"],
  },
  "@media (min-width: 1024px)": {
    transitionDelay: "1000ms",
    "& > :not(template) ~ :not(template)": {
      "--space-y-reverse": "0",
      "--space-x-reverse": "1",
      "--divide-x-reverse": "0",
      "--divide-y-reverse": "0",
      "--divide-opacity": "1",
      marginTop: "calc(1rem * calc(1 - var(--space-y-reverse)))",
      marginBottom: "calc(1rem * var(--space-y-reverse))",
      marginRight: "calc(0.5rem * var(--space-x-reverse))",
      marginLeft: "calc(0.5rem * calc(1 - var(--space-x-reverse)))",
      borderRightWidth: "calc(1px * var(--divide-x-reverse))",
      borderLeftWidth: "calc(1px * calc(1 - var(--divide-x-reverse)))",
      borderTopWidth: "calc(1px * calc(1 - var(--divide-y-reverse)))",
      borderBottomWidth: "calc(1px * var(--divide-y-reverse))",
      borderColor: ["#3f83f8", "rgba(63, 131, 248, var(--divide-opacity))"],
    },
  },
};


`;
